--- a/application/scss/components/_pane.scss
+++ b/application/scss/components/_pane.scss
@@ -35,17 +35,12 @@
   }
 
   .app-pane__subnav {
-    border-right: 1px solid $govuk-border-colour;
     padding: govuk-spacing(4) 0;
 
-    @include govuk-media-query($from: tablet) {
+    @include govuk-media-query($from: desktop) {
       padding: govuk-spacing(6) 0;
-      width: $toc-width-tablet;
       border-right: 1px solid $govuk-border-colour;
       flex: 0 0 auto;
-    }
-
-    @include govuk-media-query($from: desktop) {
       width: $toc-width;
     }
   }
